--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //Room
     def roomVersion="2.2.5"
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
+    // viewModels(), FragmentContainerView
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc01'
+
 
 }
